# blockxpand-icp-main

./: Cargo.toml  README.md  deploy.sh  dfx.json  install_dfx.sh
candid/: aggregator.did  interfaces.did  mock_icpswap.did  mock_infinity.did  mock_ledger.did  mock_sonic.did
config/: ledgers.toml
data/: pools.toml
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  DEX_API_matrix.md
frontend/: index.html
scripts/: build_frontend.sh  fetch_env.sh  reward_drift.sh
src/: lib.rs
src/aggregator/: Cargo.toml
src/aggregator/src/: cache.rs  cert.rs  cycles.rs  dex_fetchers.rs  error.rs  ledger_fetcher.rs  lib.rs  logging.rs  lp_cache.rs  metrics.rs  neuron_fetcher.rs  pool_registry.rs  utils.rs  warm.rs
src/aggregator/src/dex/: dex_icpswap.rs  dex_infinity.rs  dex_sonic.rs  mod.rs  sns_adapter.rs
src/aggregator/tests/: ledgers_single.toml  sns_adapter.rs
src/aggregator_canister/: Cargo.toml  build.rs
src/aggregator_canister/src/: lib.rs
src/bx_core/: Cargo.toml
src/bx_core/src/: lib.rs
src/bx_core/tests/: holding.rs
src/mock_icpswap_canister/: Cargo.toml
src/mock_icpswap_canister/src/: lib.rs
src/mock_infinity_canister/: Cargo.toml
src/mock_infinity_canister/src/: lib.rs
src/mock_ledger_canister/: Cargo.toml
src/mock_ledger_canister/src/: lib.rs
src/mock_sonic_canister/: Cargo.toml
src/mock_sonic_canister/src/: lib.rs
tests/: integration_tests.rs
