[package]
name = "blockxpand_icp"
version = "0.1.0"
edition = "2021"

[dependencies]
aggregator = { path = "src/aggregator" }
bx_core = { path = "src/bx_core" }
anyhow = "1"
candid = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
ic-agent = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
candid = { workspace = true }
tokio = { workspace = true }
tempfile = "3"
aggregator = { path = "src/aggregator", features = ["live-test", "claim"] }
ic-agent = { workspace = true }
quickcheck = "1"
quickcheck_macros = "1"
serde = { workspace = true }

[features]
claim = []

[workspace]
members = [
    "src/bx_core",
    "src/aggregator",
    "src/aggregator_canister",
    "src/mock_ledger_canister",
    "src/mock_icpswap_canister",
    "src/mock_sonic_canister",
    "src/mock_infinity_canister",
]

[workspace.dependencies]
async-trait = "=0.1.88"
candid = "=0.9.11"
ic-agent = "=0.26.1"
ic-cdk = "=0.10.2"
ic-cdk-macros = "=0.7.1"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
futures = "=0.3.31"
tokio = { version = "=1.46.0", features = ["macros", "rt", "time"] }
once_cell = "=1.19.0"
ic-cdk-timers = "=0.4.0"
num-traits = "=0.2.19"
tracing = "=0.1.41"
tracing-subscriber = "=0.3.18"
notify = "=6.1.1"
chrono = "=0.4.41"

