[package]
name = "mock_infinity_canister"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
serde = { workspace = true }
once_cell = { workspace = true }

[lib]
crate-type = ["cdylib"]
test = false
doctest = false
